--- a/src/app/avatars/avatars.component.html
+++ b/src/app/avatars/avatars.component.html
@@ -1,15 +1,18 @@
 <h2>My Avatars</h2>
-<ul class="avatars">
+<mat-accordion>
+  <mat-expansion-panel *ngFor="let avatar of avatars">
+    <mat-expansion-panel-header (click)="onSelect(avatar)" [class.selected]="avatar == selectedAvatar">
+      <mat-panel-title >
+        {{avatar.name}}
+      </mat-panel-title>
+  
+    </mat-expansion-panel-header>
 
-    <!--create for loop for every avatar in the mock data and disaply their id and name-->
-    <li *ngFor="let avatar of avatars" (click)="onSelect(avatar)" [class.selected]="avatar == selectedAvatar">
+    <div class="panel-content">
+       <!--calls another component called avatardetails to lighten this components load! it also prmotes reusable code
+        and less errors-->
 
-        <span class="badge">{{avatar.id}} </span>{{avatar.name}}
-    </li>
-</ul>
-
-<!--calls another component called avatardetails to lighten this components load! it also prmotes reusable code
-and less errors-->
-
-<app-avatar-detail [avatar]="selectedAvatar"></app-avatar-detail>
-
+    <app-avatar-detail [avatar]="selectedAvatar"></app-avatar-detail>
+    </div>
+  </mat-expansion-panel>
+  <mat-accordion>
